<resources>
    <string name="app_name">Coursedy</string>

    <string name="name_and_surname">Name and Surname</string>
    <string name="ex_cme2206_concepts_of_programming_languages">ex. CME2206 - Concepts of Programming Languages</string>
    <string name="course_name">Course Name</string>
    <string name="course_period">Course Period</string>
    <string name="course_code">Course Code</string>
    <string name="fall_sem">Fall Semester 2022–23</string>
    <string name="cme3202">cme3202</string>
    <string name="name_hint">Programming in Java</string>
    <string name="code_hint">SWE1007</string>
    <string name="home">Home</string>
    <string name="have_an_account">Have an account?</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">LOGIN</string>
    <string name="course">Course</string>
    <string name="CActivity">Activity</string>
    <string name="add_course_activity_text">Add Course/Activity</string>
    <string name="join_course">Join Course</string>
    <string name="add_join_course">Add/Join Course</string>
    <string name="add_course">Add Course</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="user_name">User Name</string>
    <string name="view_all_comments">View All 4 Comments</string>
    <string name="post_text">This is a post.</string>
    <string name="shared_a"> shared a </string>
    <string name="post_type">post type</string>
    <string name="date">DD MMM YYYY</string>
    <string name="course_faculty">Course Faculty</string>
    <string name="create_assignment">Create Assignment</string>
    <string name="edit_course">Edit Course</string>
    <string name="upload_text">Upload Text</string>
    <string name="delivery_date">Delivery Date: </string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="add_a_comment">Add a comment.</string>
    <string name="info_text">Info Text</string>
    <string name="assignment_update_date">Last upload date: 24 June 2020, 23.59</string>
    <string name="assignment_info">Write information for assignment.</string>
    <string name="answer">Answer</string>
    <string name="upload">Upload</string>
</resources>
