<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_500"
    tools:context=".login.RegisterActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        />


    <EditText
        android:id="@+id/reg_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/edittextbg"
        android:hint="@string/e_mail"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:textColorHint="@color/white_50" />

    <EditText
        android:id="@+id/reg_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_edit_email"
        android:background="@drawable/edittextbg"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_50"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_edit_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbg"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10sp"
        android:textColorHint="@color/white_50"
        android:layout_below="@id/reg_edit_password"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:inputType="textPassword" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/reg_btn_register"
        android:textColor="@android:color/white"
        android:background="@drawable/buttonbg"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/reg_edit_confirm_pass"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/reg_btn_register"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/reg_txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>