<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_500"
    tools:context=".login.LoginActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        />


    <EditText
        android:id="@+id/login_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/edittextbg"
        android:hint="@string/e_mail"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:textColorHint="@color/white_50" />

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit_email"
        android:background="@drawable/edittextbg"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10sp"
        android:textColorHint="@color/white_50"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/login_edit_password"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/buttonbg"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_btn_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/login_txt_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5sp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>



</RelativeLayout>