<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/midnight_500"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15sp">

        <TextView
            android:id="@+id/dialog_text_courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_name"

            />

        <EditText
            android:id="@+id/dialog_edit_courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="@color/white_50"
            android:inputType="text"
            android:background="@drawable/edittextbg"
            android:paddingVertical="10sp"
            android:paddingHorizontal="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_marginStart="15sp">

        <TextView
            android:id="@+id/dialog_text_coursePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_period"/>

        <EditText
            android:id="@+id/dialog_edit_coursePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fall_sem"
            android:maxLines="1"
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="@color/white_50"
            android:inputType="text"
            android:background="@drawable/edittextbg"
            android:paddingVertical="10sp"
            android:paddingHorizontal="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_marginStart="15sp"
        >

        <TextView
            android:id="@+id/dialog_text_courseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_code"/>

        <EditText
            android:id="@+id/dialog_edit_courseCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_hint"
            android:maxLines="1"
            android:textSize="12sp"
            android:importantForAutofill="no"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="@color/white_50"
            android:inputType="text"
            android:background="@drawable/edittextbg"
            android:paddingVertical="10sp"
            android:paddingHorizontal="20sp" />
    </LinearLayout>

</LinearLayout>