<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/midnight_500">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5sp">

        <TextView
            android:id="@+id/assignment_dialog_text_delivery_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_date"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/assignment_dialog_choose_delivery_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/assignment_dialog_text_uploadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_text"
            android:textColor="@color/white"
            android:layout_marginTop="5sp"
            android:layout_marginStart="5sp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/assignment_dialog_edit_uploadText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_info"
            android:textSize="14sp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/edittextbg"
            android:textColorHint="@color/white_50"
            android:layout_marginTop="8sp"
            android:minHeight="150sp"
            android:layout_marginEnd="10sp"
            android:paddingVertical="10sp"
            android:paddingHorizontal="15sp"/>
    </LinearLayout>


</LinearLayout>