<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/midnight_500"
    android:padding="4sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_profile_picture_content"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >


                    <TextView
                        android:id="@+id/txt_teacherName_post_content"
                        android:text="@string/user_name"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue_700"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/shared_a"
                        android:id="@+id/fixed_text_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/post_type"
                        android:textStyle="bold"
                        android:id="@+id/post_type_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp"
                        android:layout_gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="."
                        android:id="@+id/fixed_dot_content"/>

                </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/post_date_content"
                        android:layout_marginTop="0dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/date"
                        android:textColor="@color/colorRed"
                        android:textStyle="bold"

                        />

            </LinearLayout>
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/post_text"
                android:lineSpacingExtra="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"

                />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/view_all_comments"
            android:text="@string/view_all_comments"
            />



    </LinearLayout>

</RelativeLayout>