<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_500"
    tools:context=".activities.CommentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/midnight_500">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/midnight_200"
        android:layout_below="@+id/bar"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_comments"
        android:layout_below="@id/bar"
        android:layout_above="@id/bottom_relative_comments"
        android:layout_margin="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnight_200"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom_relative_comments">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/image_profile_comments"/>

        <EditText
            android:id="@+id/add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/send_comment"
            android:layout_toEndOf="@id/image_profile_comments"
            android:background="@drawable/edittextbg"
            android:hint="@string/add_a_comment"
            android:textColorHint="@color/white_50"
            android:minHeight="48dp"
            android:paddingHorizontal="15sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_comment"
            android:text="@string/send"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorRed" />

    </RelativeLayout>

</RelativeLayout>